--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,9 @@
       <a class="nav-link" href="/login">Login</a>
       {% endif %}
     </li>
+    <li>
+      <a class="nav-link" href="/edit">Edit Feedback</a>
+    </li>
   </ul>
 </nav>
 
